@@ -178,3 +178,5 @@ node /org/gtk/Private/RemoteVolumeMonitor {
 ### Have you had any luck using git-annex before? (Sometimes we get tired of reading bug reports all day and a lil' positive end note does wonders)
 
 Works fine in general.
+
+> [[fixed|done]] --[[Joey]]
